[package]
name = "image-assemblifier"
version = "0.1.0"
authors = ["rstular"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2"
rand = "0.8.4"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

[dependencies.getrandom]
version = "0.2"
features = ["js"]
